--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^12.0.4",
     "express": "^4.17.2",
+    "mercadopago": "^1.5.12",
     "mongoose": "^6.1.6"
   },
   "devDependencies": {
